Source/WebCore/Modules/mediasource/SourceBufferList.h
@@ -58,6 +58,7 @@ public:
     void remove(SourceBuffer*);
     bool contains(SourceBuffer* buffer) { return m_list.find(buffer) != notFound; }
     void clear();
+    void swap(Vector<RefPtr<SourceBuffer>>&);
 
     Vector<RefPtr<SourceBuffer>>::iterator begin() { return m_list.begin(); }
     Vector<RefPtr<SourceBuffer>>::iterator end() { return m_list.end(); }
